--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <nav class="navbar">
 <div class="logo">
 <!--<img src="./Assets/img/nk-logo-new.svg" alt="Logo" />-->
-<a href="index.html"><img src="./Assets/img/nk-logo-new.svg" alt="Logo" /></a>
+<a href="index.html"><img src="./img/nk-logo-new.svg" alt="Logo" /></a>
 </div>
 <ul class="menu">
 <li><a href="index.html" class="active">Accueil</a></li>
