--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>NAWATA</title>
-        <link rel="icon" type="image/png" href="./Assets/img/faviconlogo.png">
+        <link rel="icon" type="image/png" href="img/faviconlogo.png">
         <link rel="stylesheet" href="style.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
     <section class="Accueil">
         <div class="Accueil-info">
             <div class="Accueil-img">
-                <img src="./Assets/img/moinawata.png" alt="monImage">
+                <img src="img/moinawata.png" alt="monImage">
                 </div>
                     <div>
                         <h1>Nawata KARAMOKO</h1>
@@ -54,7 +54,7 @@
         <!-- Projet 1 -->
         <div class="projet-card-vertical">
             <div class="media-container-vertical">
-                <img src="./Assets/img/stickers upcycling.JPG" alt="Projet Emmaüs">
+                <img src="img/stickers upcycling.JPG" alt="Projet Emmaüs">
             </div>
             <div class="projet-info-vertical">
                 <h3>Stickers corners upcycling</h3>
@@ -65,7 +65,7 @@
         <!-- Projet 2 -->
         <div class="projet-card-vertical">
             <div class="media-container-vertical">
-                <img src="./Assets/img/kake.png" alt="Projet Patrimonial">
+                <img src="img/kake.png" alt="Projet Patrimonial">
             </div>
             <div class="projet-info-vertical">
                 <h3>Kakemono Emmaüs Coup de main</h3>
@@ -75,7 +75,7 @@
          <!-- Projet 3 -->
         <div class="projet-card-vertical">
             <div class="media-container-vertical">
-                <img src="./Assets/img/30 ans logo animation.gif" alt="Projet Patrimonial" style="object-fit: contain;">
+                <img src="img/30 ans logo animation.gif" alt="Projet Patrimonial" style="object-fit: contain;">
             </div>
             <div class="projet-info-vertical">
                 <h3>Organisation des 30 ans d'Emmaüs Coup de main</h3>
@@ -100,7 +100,7 @@
             <a href="a-propos.html" class="cta-button">En savoir plus</a>
         </div>
         <div class="mini-about-image">
-            <img src="./Assets/img/brut2024.jpg" alt="Nawata Karamoko">
+            <img src="img/brut2024.jpg" alt="Nawata Karamoko">
         </div>
     </div>
 </section>
@@ -119,14 +119,14 @@
             </div>
              <div class="service">
                 <video autoplay muted loop playsinline>
-                    <source src="./Assets/video/CVV_Style vidéopodcast_1-1.mp4" type="video/mp4">
+                    <source src="video/CVV_Style vidéopodcast_1-1.mp4" type="video/mp4">
                 </video>
                 <div class="overlay">
                     <a href="projets.html" class="btn-projet">CV vidéos</a>
                 </div>
             </div>
             <div class="service">
-                <img src="./Assets/img/ananas_by_nawata_ps_autoformation.png" alt="Projet 3">
+                <img src="img/ananas_by_nawata_ps_autoformation.png" alt="Projet 3">
                 <div class="overlay">
                     <a href="projets.html" class="btn-projet">Gestion de projets digitaux</a>
                 </div>
