--- a/a-propos.html
+++ b/a-propos.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>À Propos - NAWATA</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/png" href="./Assets/img/faviconlogo.png">
+        <link rel="icon" type="image/png" href="img/faviconlogo.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Boldonse&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
         <header>
             <nav class="navbar">
                 <div class="logo">
-                    <a href="index.html"><img src="./Assets/img/nk-logo-new.svg" alt="Logo" /></a>
+                    <a href="index.html"><img src="img/nk-logo-new.svg" alt="Logo" /></a>
                 </div>
                 <ul class="menu">
                     <li><a href="index.html">Accueil</a></li>
@@ -34,7 +34,7 @@
 <div class="profil-section">
     <div class="profil-content">
         <div class="profil-image">
-            <img src="./Assets/img/concourseloquence.jpg" alt="Nawata Karamoko en train de travailler">
+            <img src="img/concourseloquence.jpg" alt="Nawata Karamoko en train de travailler">
         </div>
         
         <div class="profil-text">
@@ -53,15 +53,6 @@
                     <li>Créer des ponts entre technologie et art</li>
                     <li>Mentorer les jeunes talents du digital</li>
                 </ul>
-            </div>
-            
-            <div class="profil-engagement">
-                <h3><i class='bx bx-group'></i> Mon engagement :</h3>
-                <p>
-                    Co-animatrice du concours d'éloquence <em>"Parle mais écoute"</em> et membre active 
-                    du club <em>"Abidjanaises in Tech"</em>, je m'investis pour une tech plus inclusive.
-                </p>
-            </div>
         </div>
     </div>
 </div>
