--- a/projets.html
+++ b/projets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Projets - Nawata</title>
             <link rel="stylesheet" href="style.css">
-            <link rel="icon" type="image/png" href="./Assets/img/faviconlogo.png">
+            <link rel="icon" type="image/png" href="img/faviconlogo.png">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Boldonse&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="./Assets/img/nk-logo-new.svg" alt="Logo"></a>
+                <a href="index.html"><img src="img/nk-logo-new.svg" alt="Logo"></a>
             </div>
             <ul class="menu">
                 <li><a href="index.html">Accueil</a></li>
@@ -27,9 +27,8 @@
     </header>
 
     <section class="hero-projets">
-        <img src="./Assets/img/LOGO NAWATA.png" alt="Nawwweb">
         <div class="hero-content">
-            <p>Portée par une passion pour l'image, le rythme et l'interactivité, Nawwweb fusionne création visuelle et innovation digitale. Que ce soit pour animer une histoire, concevoir un site web percutant ou piloter un projet numérique de A à Z, chaque réalisation est pensée pour captiver, connecter et convertir.
+            <p>Portée par une passion pour l'image, le rythme et l'interactivité, je fusionne création visuelle et innovation digitale. Que ce soit pour animer une histoire, concevoir un site web percutant ou piloter un projet numérique de A à Z, chaque réalisation est pensée pour captiver, connecter et convertir.
 <span class="couleur">Parce que dans un monde en perpétuel mouvement, la créativité ne peut pas rester figée.</span> </p>
         </div>
     </section>
@@ -69,7 +68,7 @@
             <!-- Projet 3 -->
             <div class="projet-card">
                 <div class="media-container">
-                    <img src="./Assets/img/creation_carte de visite0.png" alt="Projet Graphique">
+                    <img src="img/creation_carte de visite0.png" alt="Projet Graphique">
                 </div>
                 <div class="projet-info">
                     <h3>Création graphique</h3>
@@ -82,7 +81,7 @@
             <!-- Projet 4 -->
             <div class="projet-card">
                 <div class="media-container">
-                    <img src="./Assets/img/Tournage_vidéos_patrimonil.JPG" alt="Projet 4">
+                    <img src="img/Tournage_vidéos_patrimonil.JPG" alt="Projet 4">
                 </div>
                 <div class="projet-info">
                     <h3>Gestion de projets digitaux</h3>
